styling changes to Dashboard component

--- a/Dashboard/Dashboard.html
+++ b/Dashboard/Dashboard.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link rel="stylesheet" href="Dashboard.css">
 </head>
 <body>
-    <nav class="top-nav">
-        <h1>ACE</h1><span>Nigerian Exam Prep</span>
-        <a href="#">Avatar</a>
+    <nav class="topnav">
+        <ul>
+            <li>Ace<br><span>Nigerian Exam Prep</span></li>
+            <li><a href="#">Avatar</a></li>
+        </ul>
 <div class="Morning">
     <h2> Good morning, Tunde!</h2>
     <p> Ready to ace your JAMB exam today?</p>
 </div>
     <div class="card">
         <p> OVERALL READINESS<br><span>78%</span>Mastery</p>
-        <p>You are making great progress towards your JAMB goals!</p>
-        <button type="button"><p>Breakdown</p></button>
+        <h3>You are making great<br> progress towards your <br>JAMB goals!</h3>
+        <button type="button">Breakdown</button>
     </div>
 
     <div class="streak">
